feat: enhance UI/UX of code editor and improve feedback system
- Update the UI of the code editor for better readability and user experience
- Add a hint feature in the code editor to guide users for input format
- Improve the representation of parsed results to simplify user understanding
- Implement a visual feedback system on the "Next" button to indicate input validity

--- a/src/components/ReactEditor/styles.css
+++ b/src/components/ReactEditor/styles.css
@@ -1,6 +1,7 @@
 .editor {
   counter-reset: line;
   border: 1px solid #ced4da;
+  background-color: #f8feff;
 }
 
 .editor #codeArea {
@@ -18,4 +19,13 @@
   text-align: right;
   width: 40px;
   font-weight: 100;
+}
+
+.hint {
+  text-align: left;
+  color: #a2a7ac;
+  margin: 0;
+  padding: 0;
+  margin-top: 5px;
+  font-style: italic;
 }
